[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/ship.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Damaged"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )
Laser = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10, -25, 10, -25, 10, 0, 25, 0, 25, 20, -25, 20, -25, 0, -10, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="LazerPosition" type="Position2D" parent="."]
position = Vector2( 0, -25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 1 )
anims/Normal = SubResource( 2 )

[node name="RecoverTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Alien_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_entered"]
[connection signal="timeout" from="RecoverTimer" to="." method="_on_RecoverTimer_timeout"]
